<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="8dp"
    tools:context=".image.maskering.MaskeringFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/photo_desc"
        android:src="@drawable/ic_photo"
        app:layout_constraintBottom_toTopOf="@+id/maskBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/loadingSpinner"
        style="@style/SpinKitView.FadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/thresholdText"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/maskering_t"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/declineBtn" />

    <TextView
        android:id="@+id/thresholdValue"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:text="@string/maskering_0"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/thresholdText" />

    <SeekBar
        android:id="@+id/threshold"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:max="20"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/acceptBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/amountValue" />

    <TextView
        android:id="@+id/radiusText2"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/maskering_a"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/thresholdText"
        app:layout_constraintStart_toEndOf="@+id/declineBtn" />

    <TextView
        android:id="@+id/radiusText"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/maskering_r"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/radiusText2"
        app:layout_constraintStart_toEndOf="@+id/declineBtn" />

    <ImageButton
        android:id="@+id/declineBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/accept_changes_desc"
        android:src="@drawable/ic_cross"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/radius"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:max="19"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/amount"
        app:layout_constraintEnd_toStartOf="@+id/acceptBtn"
        app:layout_constraintStart_toEndOf="@+id/radiusValue" />

    <SeekBar
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:max="19"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/threshold"
        app:layout_constraintEnd_toStartOf="@+id/acceptBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/amountValue" />

    <Button
        android:id="@+id/maskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maskering"
        app:layout_constraintBottom_toTopOf="@+id/radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/acceptBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/decline_changes_desc"
        android:src="@drawable/ic_accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/radiusValue"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:text="@string/maskering_1"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/amountValue"
        app:layout_constraintStart_toEndOf="@+id/radiusText" />

    <TextView
        android:id="@+id/amountValue"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:text="@string/maskering_1"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/thresholdValue"
        app:layout_constraintStart_toEndOf="@+id/radiusText2" />

</androidx.constraintlayout.widget.ConstraintLayout>
