<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".spline.SplineFragment"
    android:id="@+id/rootLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.android.wonderfulapp.spline.SplineView
            android:id="@+id/splineView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/splineToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/splineToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="none"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/splineView">

            <ImageButton
                android:id="@+id/addPoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:padding="16dp"
                android:layout_marginHorizontal="8dp"
                android:contentDescription="@string/add_point"
                android:src="@drawable/ic_add" />

            <ImageButton
                android:id="@+id/deletePoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/delete_point"
                android:padding="16dp"
                android:src="@drawable/ic_delete" />

            <ImageButton
                android:id="@+id/drawSpline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circle_background"
                android:padding="16dp"
                android:layout_marginHorizontal="8dp"
                android:contentDescription="@string/draw_spline"
                android:src="@drawable/ic_start" />

            <ImageButton
                android:id="@+id/clearField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:padding="16dp"
                android:layout_marginHorizontal="8dp"
                android:contentDescription="@string/clear_field"
                android:src="@drawable/ic_clear" />

            <ImageButton
                android:id="@+id/movePoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:padding="16dp"
                android:layout_marginHorizontal="8dp"
                android:contentDescription="@string/move_point"
                android:src="@drawable/ic_move" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>